[package]
name = "hanja_hangul"
version = "0.1.3"
authors = ["Jeff(Heejin Park) <p14jeffwest@gmail.com>"]
edition = "2021"
description = "A Library that converts Chinese characters to Korean characters. That is, convert hanja to hangul"
keywords = ["hanja", "hangul", "hanaja2hangul"]
license = "MIT OR Apache-2.0"
include = ["src/lib.rs", "Cargo.toml", "hanja_char.rs", "dueum.rs", "hanja_word.rs", "sample.txt"]
readme = "README.md"
repository = "https://github.com/p14jeffwest/hanja_hangul"


[dependencies]
tokio = { version = "1.44.0", features = ["full"] }
